@@ -2,6 +2,10 @@
 
 For those unable to read the commit messages
 
+== 2011-03-28
+
+* changed settings.yml to use shorter option names for updated SK::SDK::Oauth
+
 == 2011-02-26
 
 * added plain php example
